[gd_scene load_steps=2 format=3 uid="uid://cy2ypfn8ixuqx"]

[ext_resource type="Script" path="res://scenes/ui/host_menu/host_menu.gd" id="1_fm6y5"]

[node name="HostMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fm6y5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.352941, 0.352941, 0.443137, 1)

[node name="InputsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -148.0
offset_right = 125.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="LobbyNameContainer" type="VBoxContainer" parent="InputsContainer"]
layout_mode = 2

[node name="LobbyNameLabel" type="Label" parent="InputsContainer/LobbyNameContainer"]
layout_mode = 2
text = "Nazwa lobby"

[node name="LobbyNameInput" type="LineEdit" parent="InputsContainer/LobbyNameContainer"]
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2

[node name="UsernameContainer" type="VBoxContainer" parent="InputsContainer"]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="InputsContainer/UsernameContainer"]
layout_mode = 2
text = "Login"

[node name="UsernameInput" type="LineEdit" parent="InputsContainer/UsernameContainer"]
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2

[node name="MaxConnectionsContainer" type="HSplitContainer" parent="InputsContainer"]
layout_mode = 2
dragger_visibility = 1

[node name="MaxConnectionsLabel" type="Label" parent="InputsContainer/MaxConnectionsContainer"]
custom_minimum_size = Vector2(170, 2.08165e-12)
layout_mode = 2
text = "Maksymalna
liczba graczy"

[node name="MaxConnectionsInputContainer" type="VBoxContainer" parent="InputsContainer/MaxConnectionsContainer"]
layout_mode = 2
alignment = 1

[node name="MaxConnectionsInput" type="OptionButton" parent="InputsContainer/MaxConnectionsContainer/MaxConnectionsInputContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
item_count = 8
selected = 7
popup/item_0/text = "3"
popup/item_0/id = 0
popup/item_1/text = "4"
popup/item_1/id = 1
popup/item_2/text = "5"
popup/item_2/id = 2
popup/item_3/text = "6"
popup/item_3/id = 3
popup/item_4/text = "7"
popup/item_4/id = 4
popup/item_5/text = "8"
popup/item_5/id = 5
popup/item_6/text = "9"
popup/item_6/id = 6
popup/item_7/text = "10"
popup/item_7/id = 7

[node name="LecturersAmountAlert" type="Label" parent="InputsContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Zbyt wielu wykładowców na liczbę graczy!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MaxLecturersContainer" type="HSplitContainer" parent="InputsContainer"]
layout_mode = 2
dragger_visibility = 1

[node name="MaxLecturersLabel" type="Label" parent="InputsContainer/MaxLecturersContainer"]
custom_minimum_size = Vector2(170, 2.08165e-12)
layout_mode = 2
text = "Maksymalna
liczba wykładowców"

[node name="MaxLecturersInputContainer" type="VBoxContainer" parent="InputsContainer/MaxLecturersContainer"]
layout_mode = 2
alignment = 1

[node name="MaxLecturersInput" type="OptionButton" parent="InputsContainer/MaxLecturersContainer/MaxLecturersInputContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
item_count = 3
selected = 2
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2

[node name="PortContainer" type="HSplitContainer" parent="InputsContainer"]
layout_mode = 2
dragger_visibility = 1

[node name="PortLabel" type="Label" parent="InputsContainer/PortContainer"]
custom_minimum_size = Vector2(170, 2.08165e-12)
layout_mode = 2
text = "Port"

[node name="PortInput" type="LineEdit" parent="InputsContainer/PortContainer"]
layout_mode = 2
text = "9001"

[node name="HostButton" type="Button" parent="InputsContainer"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
text = "Stwórz lobby"

[connection signal="item_selected" from="InputsContainer/MaxConnectionsContainer/MaxConnectionsInputContainer/MaxConnectionsInput" to="." method="_on_connections_lecturers_item_selected"]
[connection signal="item_selected" from="InputsContainer/MaxLecturersContainer/MaxLecturersInputContainer/MaxLecturersInput" to="." method="_on_connections_lecturers_item_selected"]
[connection signal="button_down" from="InputsContainer/HostButton" to="." method="_on_host_button_button_down"]
